Fixing CSS structure to fix alignment and make the policySummaries a more reusable component

--- a/src/components/views/PolicyPage/ListPoliciesPage/PolicyList/PolicyCategory/PolicyCategory.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/PolicyList/PolicyCategory/PolicyCategory.module.scss
@@ -1,18 +1,18 @@
 .categoryHeader {
-  padding: 13px;
   padding-top: 8px;
-  padding-left: 8px;
+  padding-left: 0px;
+  padding-bottom: 15px;
   display: flex;
   align-items: center;
+  margin-left: -8px;
 
   h2 {
     font-family: "rawline";
     font-size: 22px;
     font-weight: 500;
-    // text-transform: capitalize;
     text-transform: none;
     color: #29334b;
-    margin-left: 15px;
+    margin-left: 0.5rem;
 
     span {
       font-weight: 200;
@@ -22,21 +22,15 @@
 
 .categoryContainer {
   position: relative;
-  margin-left: 18px;
-  padding-left: 15px;
-  // margin-top: 10px;
+  padding-left: 35px;
   padding-top: 5px;
   padding-bottom: 10px;
-  // can't use margin here
-  // because the expanding box
-  // doesn't know about it
-  // margin-bottom: 15px;
 
   &:before {
     position: absolute;
     top: 0;
     bottom: 0;
-    left: -2.5px;
+    left: 0px;
     width: 5px;
     border-radius: 2.5px;
     background-color: #7fb0b4;
