--- a/src/components/views/PolicyPage/ListPoliciesPage/PolicyList/PolicyList.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/PolicyList/PolicyList.module.scss
@@ -45,8 +45,6 @@
 
 .topLevelContainer {
   padding: 10px;
-  // padding-left: 5px;
-  // padding-bottom: 5px;
   margin-bottom: 7.5px;
   border: 1px solid #dbdbdb;
   border-radius: 5px;
@@ -84,6 +82,11 @@
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 5px;
+
+    position: relative;
+    padding-left: 30px;
+    padding-top: 5px;
+    padding-bottom: 10px;
 
     &:before {
       position: absolute;
