--- a/src/components/views/PolicyPage/PolicySummary/PolicySummary.module.scss
+++ b/src/components/views/PolicyPage/PolicySummary/PolicySummary.module.scss
@@ -1,8 +1,7 @@
 .policySummary {
   position: relative;
   font-size: 16px;
-  margin: 0.75em 30px 0.75em 15px;
-  // padding: 0.75em 0 0.75em 1em;
+  margin-top: 15px;
   padding: 30px;
   padding-top: 0;
   font-family: "rawline";
